# ironplayer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PRD.md  README.en.md  README.md  progress.txt
.agents/: .skill-lock.json  .skill-lock.json.backup
.cargo/: config.toml
.claude/skills/cursor-debug-bundle/: .skillfish.json
.claude/skills/lib-slint-expert/: .skillfish.json  DOC.md  GETTING_STARTED.md  README.md  SKILL.md  SOURCE_STRUCTURE.md
.claude/skills/lib-slint-expert/.claude-plugin/: plugin.json
.claude/skills/lib-slint-expert/docs/: README.md
.claude/skills/lib-slint-expert/examples/: README.md
.claude/skills/lib-slint-expert/references/: ADVANCED.md  PATTERNS.md
.claude/skills/lib-slint-expert/templates/: README.md
.claude/skills/lib-slint-expert/templates/basic-app/: Cargo.toml  README.md
.claude/skills/lib-slint-expert/templates/basic-app/src/: main.rs
.claude/skills/lib-slint-expert/templates/basic-app/src/ui/: main.slint
.claude/skills/lib-slint-expert/templates/basic-app/ui/: app.slint
.claude/skills/lib-slint-expert/templates/component-library/: Cargo.toml  README.md  build.rs
.claude/skills/lib-slint-expert/templates/component-library/src/: main.rs
.claude/skills/lib-slint-expert/templates/component-library/src/ui/: main.slint
.claude/skills/lib-slint-expert/templates/component-library/src/ui/components/: info-card.slint  lib.slint  primary-button.slint  secondary-button.slint  toggle-switch.slint
.claude/skills/lib-slint-expert/templates/cross-platform/: Cargo.toml  README.md  build.rs  index.html
.claude/skills/lib-slint-expert/templates/cross-platform/src/: main.rs
.claude/skills/lib-slint-expert/templates/cross-platform/src/ui/: main.slint
.github/prompts/: plan-cpuPipelineOptimization.prompt.md
.github/skills/best-practices/: .skill-meta.json
.github/skills/codenavi/: .skill-meta.json
.github/skills/coding-guidelines/: .skill-meta.json
.github/skills/create-adr/: .skill-meta.json
.github/skills/create-rfc/: .skill-meta.json
.github/skills/docs-writer/: .skill-meta.json
.github/skills/security-best-practices/: .skill-meta.json
.github/skills/security-ownership-map/: .skill-meta.json
.github/skills/skill-architect/: .skill-meta.json
.github/skills/tactical-ddd/: .skill-meta.json
.github/skills/technical-design-doc-creator/: .skill-meta.json
.github/skills/tlc-spec-driven/: .skill-meta.json
.specs/: README.md
.specs/features/spec-01-ts-core/: design.md  spec.md  tasks.md
.specs/features/spec-02-net/: design.md  spec.md  tasks.md
.specs/features/spec-03-ts-tables/: design.md  spec.md  tasks.md
.specs/features/spec-04-ts-metrics/: design.md  spec.md
.specs/features/spec-05-wiring/: design.md  spec.md
.specs/features/spec-06-ui/: design.md  spec.md
.specs/features/spec-07-av/: design.md  spec.md
.specs/features/spec-08-av-sync/: tdd-sprint-01-av-sync.md
.specs/features/spec-09-gpu-decode/: tdd-sprint-02-gpu-decode.md
.specs/features/spec-10-mediainfo/: design.md  spec.md  tasks.md
.specs/features/spec-11-slint/: plan.md  zero-copy-plan.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
crates/av/: Cargo.toml
crates/av/src/: audio.rs  clock.rs  codec.rs  decoder.rs  deinterlace.rs  error.rs  lib.rs  nv12_to_rgb.wgsl  pes.rs  renderer.rs  scan_type.rs  video_queue.rs  yuv_to_rgb.wgsl
crates/av/src/ffi/: mod.rs
crates/av/src/hw/: d3d11_impl.rs  hwaccel_mode.rs  mod.rs  shared_nv12.rs  stub.rs  tdr.rs
crates/net/: Cargo.toml
crates/net/src/: error.rs  lib.rs  receiver.rs  rtp.rs  stop.rs  url.rs
crates/net/tests/: net_loopback.rs
crates/ts/: Cargo.toml
crates/ts/fuzz/: Cargo.toml
crates/ts/fuzz/fuzz_targets/: cat_parse.rs  tot_parse.rs
crates/ts/src/: adaptation.rs  aggregator.rs  crc.rs  demux.rs  error.rs  lib.rs  metrics.rs  packet.rs  pcr.rs  section.rs
crates/ts/src/mediainfo/: aac.rs  ac3.rs  avc.rs  bitreader.rs  error.rs  hevc.rs  mod.rs  model.rs  mpeg2video.rs  mpegaudio.rs  probe.rs  report.rs
crates/ts/src/tables/: bat.rs  cat.rs  descriptor.rs  dvb_string.rs  eit.rs  mod.rs  nit.rs  pat.rs  pmt.rs  sdt.rs  tdt.rs  tot.rs
crates/ts/tests/: e2e_validation.rs  gen_fixtures.rs  gen_real_fixtures.rs  real_snapshot.rs  tables_flow.rs
crates/ts/tests/fixtures/real/: 01_cable_sd_1svc.ts  02_cable_hd_1svc.ts  03_cable_3svc.ts  04_dvbt_hd.ts  05_dvbs_sd.ts  06_multi_audio.ts  07_scrambled.ts  08_fta_dual.ts  09_radio_only.ts  10_mixed_nit.ts
crates/ui/: Cargo.toml
crates/ui-slint/: Cargo.toml  build.rs
crates/ui-slint/src/: context_menu.rs  lib.rs  state.rs  video.rs
crates/ui-slint/ui/: appwindow.slint
crates/ui/src/: lib.rs  state.rs  status_bar.rs
crates/ui/src/panels/: mediainfo.rs  metrics.rs  mod.rs  pid.rs  tables.rs  video.rs
docs/: ironplayer-audio-prd-v0.2.md  ironplayer-quality-roadmap-v0.1.md  ironplayer-quality-roadmap-v0.3.md  ironstream-prd-v0.1.md  ironstream-spec.md  player-funcional-pendencias.md
src/: channels.rs  config.rs  ffmpeg_check.rs  main.rs  table_dispatcher.rs
