[workspace]
members = ["crates/ts"]
resolver = "2"

[workspace.dependencies]
tokio             = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
bytes             = "1"
byteorder         = "1"
serde             = { version = "1", features = ["derive"] }
tracing           = "0.1"
anyhow            = "1"
thiserror         = "2"
