[package]
name        = "av"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"

[dependencies]
ts                = { path = "../ts" }
bytes             = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow            = { workspace = true }
libloading        = { workspace = true }
cpal              = { workspace = true }
egui              = "0.29"
wgpu              = "22"
egui-wgpu         = "0.29"
bytemuck          = { version = "1", features = ["derive"] }

[dev-dependencies]
