[package]
name        = "av"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"

[dependencies]
ts                = { path = "../ts" }
bytes             = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow            = { workspace = true }
libloading        = { workspace = true }
cpal              = { workspace = true }
egui              = "0.29"
wgpu              = "22"
egui-wgpu         = "0.29"
bytemuck          = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
] }

[dev-dependencies]
