[package]
name        = "av"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"

[dependencies]
ts                = { path = "../ts" }
bytes             = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow            = { workspace = true }
libloading        = { workspace = true }
cpal              = { workspace = true }
wgpu              = "29"
bytemuck          = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

[dev-dependencies]
