[package]
name        = "ts"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"

[dependencies]
bytes             = { workspace = true }
byteorder         = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
rstest            = "0.23"
proptest          = "1"
pretty_assertions = "1"
