[package]
name        = "ts"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"

[dependencies]
bytes             = { workspace = true }
byteorder         = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
tokio             = { workspace = true, features = ["sync"] }
chrono            = { version = "0.4", default-features = false, features = ["std", "clock"] }
encoding_rs       = "0.8"

[dev-dependencies]
rstest              = "0.23"
proptest            = "1"
pretty_assertions   = "1"
crossbeam-channel   = { workspace = true }
