[package]
name    = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ts  = { path = "../ts" }
net = { path = "../net" }

eframe            = { version = "0.29", features = ["wgpu"] }
egui              = "0.29"
egui_plot         = "0.29"
crossbeam-channel = { workspace = true }
tracing           = { workspace = true }
