[package]
name    = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ts  = { path = "../ts" }
av  = { path = "../av" }
net = { path = "../net" }

eframe            = { version = "0.29", features = ["wgpu"] }
egui              = "0.29"
egui_plot         = "0.29"
chrono            = { version = "0.4", default-features = false, features = ["std"] }
crossbeam-channel = { workspace = true }
tracing           = { workspace = true }
