[package]
name = "basic-app"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "A basic Slint application template"
license = "MIT OR Apache-2.0"

[dependencies]
slint = "1.13"

[build-dependencies]
slint-build = "1.13"

# WebAssembly support - uncomment for web deployment
# [lib]
# path = "src/main.rs"
# crate-type = ["cdylib"]

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { version = "0.2" }
# web-sys = { version = "0.3", features = ["console"] }
# console_error_panic_hook = "0.1.5"